[gd_scene load_steps=8 format=3 uid="uid://cnsb34rjr1g3t"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_6tx37"]
[ext_resource type="Shader" path="res://scenes/player/player.gdshader" id="2_got4k"]
[ext_resource type="Texture2D" uid="uid://bksag78fscitd" path="res://textures/player/sprite.png" id="3_g01la"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gus1"]
size = Vector2(32, 56)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4q1uy"]
shader = ExtResource("2_got4k")
shader_parameter/modulate = Color(1, 1, 1, 0.0784314)

[sub_resource type="Animation" id="Animation_ud8h8"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(0.996078, 0, 0.176471, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bq1k6"]
_data = {
"hit": SubResource("Animation_ud8h8")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_6tx37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_7gus1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4q1uy")
scale = Vector2(4, 4)
texture = ExtResource("3_g01la")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -79.585)
limit_top = -155
limit_bottom = 975
position_smoothing_speed = 2.0
drag_vertical_enabled = true
drag_top_margin = 0.1
drag_bottom_margin = 0.43
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bq1k6")
}

[node name="SafeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="changed_facing" from="." to="." method="_on_changed_facing"]
